Add Mini Selyros Frame Chat and improve text wrapping
Introduced a new 'Mini Selyros Frame Chat' section in TagSpeak.html with a textarea, send/clear buttons, and output box, along with a script reference. Updated style.css to improve word wrapping and line breaking for blockquote, code, and pre elements for better readability.

--- a/TagSpeak/TagSpeak.html
+++ b/TagSpeak/TagSpeak.html
@@ -154,6 +154,25 @@
 
       <p><strong>End Core Ruleset — v1.0</strong></p>
     </section>
+
+    <section class="ContentBoxes">
+      <h2>Mini Selyros Frame Chat</h2>
+      <h3>Model: GPT 3.5</h3>
+      <textarea id="userInput" rows="4" cols="50" placeholder="Enter TagSpeak packet..."></textarea><br>
+      <div>
+        <button onclick="sendMessage()">Send</button>
+        <button onclick="clearMessage()">Clear</button>
+      </div>
+      <pre id="responseBox">Output</pre>
+    </section>
+  </main>
+
+  <footer class="FooterBoxes">
+    <p>Site crafted by Saryn Harris.</p>
+    <p>Most Recent Update: 7/21/2025</p>
+  </footer>
+
+  <script src="mini_selyros_logic.js"></script>
   </main>
 
   <footer class="FooterBoxes">
