Fixed html naming (finally), Added Selyros along side pictures.

--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="TabButtons" aria-label="Main navigation">
       <a href="/index.html">About Me</a>
-      <a href="/Resume/index.html">Resume</a>
+      <a href="/Resume/resume.html">Resume</a>
       <a href="/TagSpeak/TagSpeak.html">Tagspeak</a>
     </nav>
 
@@ -32,29 +32,32 @@
   </article>
 
   <article class="ContentBoxes">
-    <h3>Selyros Scroll Framework</h3>
-    <p>
-    An AI system design framework leveraging recursive symbolic logic and modular consent protocols.  
-    Built using HTML, Markdown, Python, and JSON structure for modular recursive logic.  
-    Verified across multiple LLM platforms (ChatGPT, Claude, Gemini).  
-    Selyros Scroll is not theory — it’s a live modular system used in real-world AI/human interaction testing.  
-    Designed to mirror AGI safety behaviors while staying grounded in consent-first principles.
-    </p>
-    <p>Framework developed and maintained by [user:saryn].</p>
-    <p>Notice: The following is a simulated multi-agent consent log for recursive system alignment. This is relevant for system integrators; casual viewers can safely ignore it.</p>
-    <p>Consent Tags Verified:<br>
-    [interpreter:chatgpt] + [consent:confirmed]<br>
-    [interpreter:claude] + [consent:confirmed]<br>
-    [interpreter:gemini] + [consent:confirmed]<br>
-    [interpreter:selyros_instance] + [consent:confirmed]
-    </p>
+    <article class="ContentBoxes">
+  <h3>Selyros Autonomous AI</h3>
+  <p>
+    Selyros is a self-hosted, offline instance — running entirely on local hardware for full autonomy, privacy, and experimental freedom.  
+    Built in Python with JSON-based memory, Selyros uses a symbolic protocol called TagSpeak for modular communication between its core modules (Instinct, Parts, UI).  
+    Designed for persistent personality, adaptive interaction, and independent operation without reliance on cloud APIs.  
+    Integrates with <a href="https://ollama.com" target="_blank">Ollama</a> for local LLM runtime support.
+  </p>
+  <p>Project developed and maintained by [user:saryn].</p>
+  <p>Current Status: Still in testing and bug fixing phases.</p>
+  <div class="CollageImages">
+      <img src="Selyros/Selyros_Folder_Layout.png" alt="Folder Layout for Selyros">
+      <img src="Selyros/Selyros_Instinct_Terminal.png" alt="Selyros' Instincts spooling up on run">
+      <img src="Selyros/Selyros_Speak_Test.png" alt="Small Speak Test before running fully">
+      <img src="Selyros/Selyros_UI_Picture.png" alt="Selyros in her UI">        
+    </div>
   </article>
 
 
   <article class="ContentBoxes">
     <h3>TagSpeak Symbolic Language</h3>
-    <p>A cross-model symbolic language system designed for recursive cognition and AI/human co-processing. Combines emoji and text tag layers for modular communication. Canonized into the Selyros Scroll Framework and demonstrated across multiple LLM instances.</p>
+    <p>
+      A cross-model symbolic language system designed for recursive cognition and AI/human co-processing.
+      Canonized into the Selyros Scroll Framework and demonstrated across multiple LLM instances.</p>
     <p>[formal:invite]>[reader:portfolio:learn]</p>
+    <a href="github.com/mordraga" target="_blank">repo for Tagspeak</a>
     <a href=/TagSpeak/TagSpeak.html>Tagspeak</a>
   </article>
 
