--- a/TagSpeak/TagSpeak.html
+++ b/TagSpeak/TagSpeak.html
@@ -11,8 +11,8 @@
   <header>
     <nav class="TabButtons" aria-label="Main navigation">
       <a href="/index.html">About Me</a>
-      <a href="/Resume/index.html">Resume</a>
-      <a href="/Projects/index.html">Projects</a>
+      <a href="/Resume/resume.html">Resume</a>
+      <a href="/Projects/projects.html">Projects</a>
     </nav>
     <div class="ContentBoxes">
       <h1 class="AccessText">📦 Tagspeak Syntax — v1.0</h1>
