--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
   <header>
     <nav class="TabButtons" aria-label="Main navigation">
-      <a href="Resume/index.html">Resume</a>
-      <a href="Projects/index.html">Projects</a>
+      <a href="Resume/resume.html">Resume</a>
+      <a href="Projects/projects.html">Projects</a>
       <a href="TagSpeak/TagSpeak.html">Tagspeak</a>
     </nav>
     <div class="ContentBoxes">
