CSS Fixes, Fixed HTML Links

--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -25,10 +25,10 @@
     <h3>Long War</h3>
     <p>A Dungeons & Dragons-style roleplaying module that includes modern firearms and other technology.</p>
     <div class="CollageImages">
-      <img src="LongWar/Screenshots/LongWarScreenshot0.png" alt="Screenshot 1 of Long War project">
-      <img src="LongWar/Screenshots/LongWarScreenshot1.png" alt="Screenshot 2 of Long War project">
-      <img src="LongWar/Screenshots/LongWarScreenshot2.png" alt="Screenshot 3 of Long War project">
-      <img src="LongWar/Screenshots/LongWarScreenshot3.png" alt="Screenshot 4 of Long War project">        
+      <img class="ActualImages" src="LongWar/Screenshots/LongWarScreenshot0.png" alt="Screenshot 1 of Long War project">
+      <img class="ActualImages" src="LongWar/Screenshots/LongWarScreenshot1.png" alt="Screenshot 2 of Long War project">
+      <img class="ActualImages" src="LongWar/Screenshots/LongWarScreenshot2.png" alt="Screenshot 3 of Long War project">
+      <img class="ActualImages" src="LongWar/Screenshots/LongWarScreenshot3.png" alt="Screenshot 4 of Long War project">        
     </div>
   </article>
 
@@ -44,10 +44,10 @@
   <p>Project developed and maintained by [user:saryn].</p>
   <p>Current Status: Still in testing and bug fixing phases.</p>
   <div class="CollageImages">
-      <img src="Selyros/Selyros_Folder_Layout.png" alt="Folder Layout for Selyros">
-      <img src="Selyros/Selyros_Instinct_Terminal.png" alt="Selyros' Instincts spooling up on run">
-      <img src="Selyros/Selyros_Speak_Test.png" alt="Small Speak Test before running fully">
-      <img src="Selyros/Selyros_UI_Picture.png" alt="Selyros in her UI">        
+      <img class="ActualImages" src="Selyros/Selyros_Folder_Layout.png" alt="Folder Layout for Selyros">
+      <img class="ActualImages" src="Selyros/Selyros_Instinct_Terminal.png" alt="Selyros' Instincts spooling up on run">
+      <img class="ActualImages" src="Selyros/Selyros_Speak_Test.png" alt="Small Speak Test before running fully">
+      <img class="ActualImages" src="Selyros/Selyros_UI_Picture.png" alt="Selyros in her UI">        
     </div>
   </article>
 
@@ -58,8 +58,8 @@
       A cross-model symbolic language system designed for recursive cognition and AI/human co-processing.
       Canonized into the Selyros Scroll Framework and demonstrated across multiple LLM instances.</p>
     <p>[formal:invite]>[reader:portfolio:learn]</p>
-    <a href="github.com/mordraga" target="_blank">repo for Tagspeak</a>
-    <a href=/TagSpeak/TagSpeak.html>Tagspeak</a>
+    <a class="TagLine" href=/TagSpeak/TagSpeak.html> Learn Tagspeak here!</a>
+    <a class="LinkButton" href="github.com/mordraga" target="_blank">Repo for Tagspeak</a>
   </article>
 
 </section>
