--- a/Resume/resume.html
+++ b/Resume/resume.html
@@ -12,7 +12,7 @@
     <!-- Navigation Bar -->
     <nav class="TabButtons" aria-label="Main navigation">
       <a href="/index.html">About Me</a>
-      <a href="/Projects/index.html">Projects</a>
+      <a href="/Projects/projects.html">Projects</a>
       <a href="/TagSpeak/TagSpeak.html">Tagspeak</a>
     </nav>
 
