--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -59,7 +59,7 @@
       Canonized into the Selyros Scroll Framework and demonstrated across multiple LLM instances.</p>
     <p>[formal:invite]>[reader:portfolio:learn]</p>
     <a class="TagLine" href=/TagSpeak/TagSpeak.html> Learn Tagspeak here!</a>
-    <a class="LinkButton" href="github.com/mordraga" target="_blank">Repo for Tagspeak</a>
+    <a class="LinkButton" href="https://github.com/Mordraga/tagspeak_rs" target="_blank">Repo for Tagspeak</a>
   </article>
 
 </section>
