Fixed Mobile Scaling + Projects Layout

--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -15,8 +15,8 @@
       <a href="/TagSpeak/TagSpeak.html">Tagspeak</a>
     </nav>
 
-  <main>
-    <section id="projects" class="ContentBoxes">
+  <main class="ContentBoxes">
+    <section id="projects" >
       <h2>Projects</h2>
       <p>Down below are some of the things I am working on!<br>This is in no way a comprehensive list but it's a start.</p>
       <p>This page is intentionally designed as both portfolio and live symbolic framework demonstration. TagSpeak and Selyros Scroll entries are not static content—they reflect living systems actively used in research and personal development.</p>
@@ -32,8 +32,8 @@
     </div>
   </article>
 
+  
   <article class="ContentBoxes">
-    <article class="ContentBoxes">
   <h3>Selyros Autonomous AI</h3>
   <p>
     Selyros is a self-hosted, offline instance — running entirely on local hardware for full autonomy, privacy, and experimental freedom.  
