Added mobile friendly popups.

--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -21,38 +21,36 @@
       <p>Down below are some of the things I am working on!<br>This is in no way a comprehensive list but it's a start.</p>
       <p>This page is intentionally designed as both portfolio and live symbolic framework demonstration. TagSpeak and Selyros Scroll entries are not static content—they reflect living systems actively used in research and personal development.</p>
 
-  <article class="ContentBoxes">
+   <article class="ContentBoxes">
     <h3>Long War</h3>
     <p>A Dungeons & Dragons-style roleplaying module that includes modern firearms and other technology.</p>
     <div class="CollageImages">
-      <img class="ActualImages" src="LongWar/Screenshots/LongWarScreenshot0.png" alt="Screenshot 1 of Long War project">
-      <img class="ActualImages" src="LongWar/Screenshots/LongWarScreenshot1.png" alt="Screenshot 2 of Long War project">
-      <img class="ActualImages" src="LongWar/Screenshots/LongWarScreenshot2.png" alt="Screenshot 3 of Long War project">
-      <img class="ActualImages" src="LongWar/Screenshots/LongWarScreenshot3.png" alt="Screenshot 4 of Long War project">        
+      <img class="ActualImages clickable-img" src="LongWar/Screenshots/LongWarScreenshot0.png" alt="Screenshot 1 of Long War project">
+      <img class="ActualImages clickable-img" src="LongWar/Screenshots/LongWarScreenshot1.png" alt="Screenshot 2 of Long War project">
+      <img class="ActualImages clickable-img" src="LongWar/Screenshots/LongWarScreenshot2.png" alt="Screenshot 3 of Long War project">
+      <img class="ActualImages clickable-img" src="LongWar/Screenshots/LongWarScreenshot3.png" alt="Screenshot 4 of Long War project">        
     </div>
-  </article>
+   </article>
 
-  
-  <article class="ContentBoxes">
-  <h3>Selyros Autonomous AI</h3>
-  <p>
-    Selyros is a self-hosted, offline instance — running entirely on local hardware for full autonomy, privacy, and experimental freedom.  
-    Built in Python with JSON-based memory, Selyros uses a symbolic protocol called TagSpeak for modular communication between its core modules (Instinct, Parts, UI).  
-    Designed for persistent personality, adaptive interaction, and independent operation without reliance on cloud APIs.  
-    Integrates with <a href="https://ollama.com" target="_blank">Ollama</a> for local LLM runtime support.
-  </p>
-  <p>Project developed and maintained by [user:saryn].</p>
-  <p>Current Status: Still in testing and bug fixing phases.</p>
-  <div class="CollageImages">
-      <img class="ActualImages" src="Selyros/Selyros_Folder_Layout.png" alt="Folder Layout for Selyros">
-      <img class="ActualImages" src="Selyros/Selyros_Instinct_Terminal.png" alt="Selyros' Instincts spooling up on run">
-      <img class="ActualImages" src="Selyros/Selyros_Speak_Test.png" alt="Small Speak Test before running fully">
-      <img class="ActualImages" src="Selyros/Selyros_UI_Picture.png" alt="Selyros in her UI">        
+   <article class="ContentBoxes">
+    <h3>Selyros Autonomous AI</h3>
+    <p>
+      Selyros is a self-hosted, offline instance — running entirely on local hardware for full autonomy, privacy, and experimental freedom.  
+      Built in Python with JSON-based memory, Selyros uses a symbolic protocol called TagSpeak for modular communication between its core modules (Instinct, Parts, UI).  
+      Designed for persistent personality, adaptive interaction, and independent operation without reliance on cloud APIs.  
+      Integrates with <a href="https://ollama.com" target="_blank">Ollama</a> for local LLM runtime support.
+    </p>
+    <p>Project developed and maintained by [user:saryn].</p>
+    <p>Current Status: Still in testing and bug fixing phases.</p>
+    <div class="CollageImages">
+        <img class="ActualImages clickable-img" src="Selyros/Selyros_Folder_Layout.png" alt="Folder Layout for Selyros">
+        <img class="ActualImages clickable-img" src="Selyros/Selyros_Instinct_Terminal.png" alt="Selyros' Instincts spooling up on run">
+        <img class="ActualImages clickable-img" src="Selyros/Selyros_Speak_Test.png" alt="Small Speak Test before running fully">
+        <img class="ActualImages clickable-img" src="Selyros/Selyros_UI_Picture.png" alt="Selyros in her UI">        
     </div>
-  </article>
+   </article>
 
-
-  <article class="ContentBoxes">
+   <article class="ContentBoxes">
     <h3>TagSpeak Symbolic Language</h3>
     <p>
       A cross-model symbolic language system designed for recursive cognition and AI/human co-processing.
@@ -60,9 +58,9 @@
     <p>[formal:invite]>[reader:portfolio:learn]</p>
     <a class="TagLine" href=/TagSpeak/TagSpeak.html> Learn Tagspeak here!</a>
     <a class="LinkButton" href="https://github.com/Mordraga/tagspeak_rs" target="_blank">Repo for Tagspeak</a>
-  </article>
+   </article>
 
-</section>
+   </section>
 
   </main>
 
