--- a/Resume/resume.html
+++ b/Resume/resume.html
@@ -91,7 +91,7 @@
 
             <!-- Resume Download -->
             <footer>
-                <a href="Saryn Harris Resume 7-12-2025.pdf" class="DownloadButtons">Download My Full Resume Here!</a>
+                <a href="Saryn Harris Resume 8_8_2025.pdf" class="DownloadButtons">Download My Full Resume Here!</a>
                 <a href="javascript:history.back()" class="DownloadButtons">← Go Back</a>
             </footer>
         </section>
