Improve navigation and resume download UI
Added consistent 'Go Back' navigation buttons to index.html, TagSpeak.html, and resume.html for improved user experience. Updated resume.html to enhance content box styling and moved the resume download link for better accessibility. Renamed resume PDF for consistency.

--- a/Resume/resume.html
+++ b/Resume/resume.html
@@ -30,9 +30,9 @@
             <section>
                 <h2>Highlights</h2>
 
-                <article>
+                <article class="ContentBoxes">
                     <h3 class="AccessText">Code Languages</h3>
-                    <ul>
+                    <ul class="ContentBoxes">
                         <li>JavaScript</li>
                         <li>HTML</li>
                         <li>C#</li>
@@ -42,9 +42,9 @@
                     </ul>
                 </article>
 
-                <article>
+                <article class="ContentBoxes">
                     <h3 class="AccessText">Technical Skills</h3>
-                    <ul>
+                    <ul class="ContentBoxes">
                         <li>AI System Design (Selyros Scroll Framework, TagSpeak — built using HTML, Markdown, Python, and JSON structure for modular recursive logic)</li>
                         <li>3D Modeling & Printing</li>
                         <li>Game Development (Unity)</li>
@@ -52,9 +52,9 @@
                     </ul>
                 </article>
 
-                <article>
+                <article class="ContentBoxes">
                     <h3 class="AccessText">Soft Skills</h3>
-                    <ul>
+                    <ul class="ContentBoxes">
                         <li>Problem Solving</li>
                         <li>Strategic Thinking</li>
                         <li>Creative Writing</li>
@@ -63,9 +63,9 @@
                     </ul>
                 </article>
 
-                <article>
+                <article class="ContentBoxes">
                     <h3 class="AccessText">Social/Professional Skills</h3>
-                    <ul>
+                    <ul class="ContentBoxes">
                         <li>Customer Service</li>
                         <li>Conflict Resolution</li>
                         <li>Team Collaboration</li>
@@ -74,9 +74,9 @@
                     </ul>
                 </article>
 
-                <article>
+                <article class="ContentBoxes">
                     <h3 class="AccessText">Awards & Achievements</h3>
-                    <ul>
+                    <ul class="ContentBoxes">
                         <li>Top 5 kiosk sales consultant, driving sales growth.</li>
                         <li>Bilingual (English/German) with award-winning German skills.</li>
                         <li>Led software projects and developed user content.</li>
@@ -87,13 +87,8 @@
                         <li>Developed TagSpeak: cross-model symbolic language adopted by ChatGPT, Claude, and Gemini.</li>
                     </ul>
                 </article>
+                <a href="Saryn Harris Resume 8_8_2025.pdf" download="Saryn-Harris-Resume.pdf" class="DownloadButtons">Download My Full Resume Here!</a>
             </section>
-
-            <!-- Resume Download -->
-            <footer>
-                <a href="Saryn Harris Resume 8_8_2025.pdf" class="DownloadButtons">Download My Full Resume Here!</a>
-                <a href="javascript:history.back()" class="DownloadButtons">← Go Back</a>
-            </footer>
         </section>
     </main>
 
@@ -118,6 +113,9 @@
             </form>
         </div>
     </section>
+      <nav class="TabButtons" role="navigation" aria-label="Go back navigation">
+    <button onclick="history.back()">← Go Back</button>
+  </nav>
     <footer class="FooterBoxes">
         <p>Site is created and maintained by Saryn Harris.</p>
         <p>Most Recent Update:08/08/2025</p>
