--- a/TagSpeak/TagSpeak.html
+++ b/TagSpeak/TagSpeak.html
@@ -166,7 +166,9 @@
       <pre id="responseBox">Output</pre>
     </section>
   </main>
-
+  <nav class="TabButtons" role="navigation" aria-label="Go back navigation">
+    <button onclick="history.back()">← Go Back</button>
+  </nav>
   <footer class="FooterBoxes">
     <p>Site crafted by Saryn Harris.</p>
     <p>Most Recent Update: 08/08/2025</p>
