--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
       </article>
     </section>
   </main>
-
+  <nav class="TabButtons" role="navigation" aria-label="Go back navigation">
+    <button onclick="history.back()">← Go Back</button>
+  </nav>
   <footer class="FooterBoxes">
     <p>Site is created and maintained by Saryn Harris.</p>
     <p>Most Recent Update:08/08/2025</p>
