--- a/Resume/resume.html
+++ b/Resume/resume.html
@@ -87,7 +87,7 @@
                         <li>Developed TagSpeak: cross-model symbolic language adopted by ChatGPT, Claude, and Gemini.</li>
                     </ul>
                 </article>
-                <a href="Saryn Harris Resume 8_8_2025.pdf" download="Saryn-Harris-Resume.pdf" class="DownloadButtons">Download My Full Resume Here!</a>
+                <a href="Saryn_Harris_Resume 8_8_2025.pdf" download="Saryn-Harris-Resume.pdf" class="DownloadButtons">Download My Full Resume Here!</a>
             </section>
         </section>
     </main>
