Updated tagspeak to it's modern form.

--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -51,11 +51,18 @@
    </article>
 
    <article class="ContentBoxes">
-    <h3>TagSpeak Symbolic Language</h3>
+    <h3>TagSpeak_rs</h3>
     <p>
-      A cross-model symbolic language system designed for recursive cognition and AI/human co-processing.
-      Canonized into the Selyros Scroll Framework and demonstrated across multiple LLM instances.</p>
-    <p>[formal:invite]>[reader:portfolio:learn]</p>
+      A symbolic, packet-based language designed to be 
+      human-readable and machine-parsable. Entire language is 
+      written in <em>Rust</em>. 
+    </p>
+    <img src="Tagspeak/Tagspeak-9.png">
+    <pre>
+    [funct:tagspeak_invite]{
+      [http(get)@<a href = "https://github.com/Mordraga/tagspeak_rs">https://github.com/Mordraga/tagspeak_rs</a>]
+    }
+    </pre>
     <a class="TagLine" href=/TagSpeak/TagSpeak.html> Learn Tagspeak here!</a>
     <a class="LinkButton" href="https://github.com/Mordraga/tagspeak_rs" target="_blank">Repo for Tagspeak</a>
    </article>
