--- a/TagSpeak/TagSpeak.html
+++ b/TagSpeak/TagSpeak.html
@@ -95,12 +95,17 @@
   </main>
   <a class="LinkButton" href="https://github.com/Mordraga/tagspeak_rs" target="_blank">Repo for Tagspeak</a>
 </section>
-
-  </main>
-  
+</main>
+<section class="ContentBoxes">
+  <h3>Mini Selyros- Tagspeak Teacher</h3>
+  <h4>Model: GPT 3.5</h4>
+  <code id="responseBox">Response Here</code><br>
+  <textarea id="userInput" placeholder="Type here to talk to Mini-Selyros"></textarea>
+  <button>Send</button>
+</section>
 <footer class="ContentBoxes" style="margin-bottom:2rem;">
   <p>© 2025 Saryn Harris — TagSpeak RS</p>
 </footer>
-
+<script src="mini_selyros_logic.js"></script>
 </body>
 </html>
